--- a/style.css
+++ b/style.css
@@ -43,3 +43,150 @@ line-height: 200%;
     color: #fff;
     font-size: 20px;
 }
+
+
+.donate_section{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
+.cetagory{
+    text-align: center;
+    width: 80%;
+}
+.cetagory h1{
+    font-size: 55px;
+    font-weight: bold;
+}
+.cetagory p{
+    font-size: 20px;
+}
+
+.donate_amount{
+    display: flex;
+    margin-left: 220px;
+   margin-top: 30px;
+   
+}
+
+.amount{
+    color: rgb(85, 85, 85);
+    margin: 15px;
+    padding: 60px;
+    background: rgb(250, 250, 250);
+    box-shadow: rgba(0, 0, 0, 0.01) 0px 2px 4px 0px inset;
+}
+#money{
+    color: #e64f4f;
+    margin: 15px;
+    padding: 60px;
+    background: #ffdfdf;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(250, 70, 70) 0px 0px 0px 3px;
+}
+
+.taka input{
+    margin-top: 30px;
+    width: 70%;
+    height: 50px;
+    font-size: 25px;
+    border: none;
+    outline: none;
+    text-align: center;
+    border-bottom: 2px solid #ddd;
+}
+
+
+
+
+.donate_text{
+    text-align: center;
+}
+.donate_text h1{
+    font-size: 55px;
+    font-weight: bold;
+    
+
+
+}
+.donate_text p{
+    font-size: 20px;
+   
+}
+.plan_box{
+    display: flex;
+    margin-left: 180px;
+}
+.plan{
+    width: 400px;
+    height: 400px;
+    margin:20px;
+    font-size: 18px;
+    border-radius: 2%;
+    padding: 80px 10px 0px 60px;
+
+}
+
+.plan img{
+    width: 80px;
+}
+
+.plan1{
+    background-color:rgb(219, 251, 242);
+}
+.plan2{
+    background-color: #f7dede;
+}
+.plan3{
+    background-color:rgb(247, 231, 212);
+}
+
+
+
+.my_updates{
+    text-align: center;
+}
+.my_updates h1{
+    font-size: 55px;
+}
+.my_updates p{
+    font-size: 20px;
+}
+
+.subscribe_form{
+    background-color:rgb(247, 231, 212);
+    width: 600px;
+    padding:100px ;
+    margin: 50px auto;
+}
+
+.subscribe_form input{
+    width: 300px;
+    height: 14px;
+    padding: 20px;
+    font-size: 20px;
+    outline: none;
+    border: none;
+    background-color: #ddd;
+    border-radius: 5% 0% 0% 5%;
+}
+
+.subscribe_form a{
+    text-decoration: none;
+    padding: 6px 25px;
+    background-color: #e64f4f;
+    border-radius: 0% 5% 5% 0%;
+    color: #fff;
+    font-size: 20px;
+
+}
+.fooder_text{
+    color: #fff;
+    background: #000;
+    padding: 60px;
+}
+.fooder_text h1{
+    font-size: 40px;
+}
+
